--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,33 @@
-.sections{
+body {
+  font-family: 'Montserrat', sans-serif;
+  margin:   0;
+}
+
+.sections {
   display: flex;
   height:   100vh;
 }
 
 .sections > *{
   border: 1px solid blue;
+  padding: 10px;
   text-align:   center;
   flex: 1;
   text-transform:   uppercase;  
 }
 
-.hidesection {
+.section-hidden {
   flex: 0;
   display:  none;
+}
+
+.button__return {
+  position: fixed;
+  right: 0;
+  margin-top: 16px;
+  margin-right: 16px;
+}
+
+.button__return-hidden {
+  display: none;
 }
